[gd_scene load_steps=5 format=3 uid="uid://d3albi0hmpvhh"]

[ext_resource type="Script" path="res://ship.gd" id="1_47qgr"]
[ext_resource type="Texture2D" uid="uid://bi6xk6yrp5w1i" path="res://assets/ship-pixel.png" id="1_ewi2q"]
[ext_resource type="PackedScene" uid="uid://ds2hx6vg6rxim" path="res://bullet.tscn" id="2_lw0yf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ss4g"]
radius = 36.0
height = 82.0

[node name="Ship" type="Area2D"]
collision_mask = 2
script = ExtResource("1_47qgr")
bullet_scene = ExtResource("2_lw0yf")

[node name="ShipSprite" type="Sprite2D" parent="."]
position = Vector2(0, 54)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ewi2q")

[node name="CollisionShapeShip" type="CollisionShape2D" parent="."]
position = Vector2(0, 56)
shape = SubResource("CapsuleShape2D_0ss4g")

[node name="BulletCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BulletCooldown" to="." method="_on_bullet_cooldown_timeout"]
